--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <title>Synchronize</title>
   </head>
   <body>
+    <!-----------------------Hero section----------------------->
     <div class="hero-section">
       <nav class="navbar">
         <a href="#"
@@ -35,6 +36,7 @@
           <a href="#">Open Synchronize</a>
         </div>
       </nav>
+      <!-- Hero content -->
       <div class="hero-content">
         <div class="hero-text">
           <h1>Collaboration</h1>
@@ -42,6 +44,7 @@
         </div>
 
         <div class="hero-images">
+          <!-- bouncing images -->
           <img
             src="./props/svg/01-hero_section/02-left-man.svg"
             alt="left-man"
@@ -54,6 +57,7 @@
           />
         </div>
       </div>
+      <!-- Hero description -->
       <div class="hero-desc">
         <p>
           Lorem ipsum dolor sit amet consectetur adipisicing elit. <br />
@@ -69,6 +73,12 @@
           <a href="#">Download Now</a>
         </div>
       </div>
+    </div>
+    <!----------------------App Section------------------------->
+    <div class="app-section" id="app-section">
+      <div class="backdrop"></div>
+      <!-- App -->
+      <div class="app-window app-layout"></div>
     </div>
   </body>
 </html>
