--- a/index.html
+++ b/index.html
@@ -485,7 +485,108 @@
         </div>
       </div>
     </div>
+    <!---------------------------StatsBar---------------------------------->
+    <div class="stats-section">
+      <div class="stats-1 stats">
+        <h3>25+</h3>
+        <p>Servers</p>
+      </div>
+      <div class="stats-2 stats">
+        <h3>100K+</h3>
+        <p>Users</p>
+      </div>
+      <div class="stats-3 stats">
+        <h3>15+</h3>
+        <p>Commands</p>
+      </div>
+      <div class="stats-4 stats">
+        <h3>∞</h3>
+        <p>Possibilities</p>
+      </div>
+    </div>
 
+    <!-- --------------Why Synchronize------------------------- -->
+    <div class="why-section" id="why-section">
+      <div class="why-section-left">
+        <h2><span style="color: #ff2441">Why</span> Synchronize?</h2>
+        <br /><br />
+        <h4>
+          Powerful way to collaborate with <br />the most robust bot in the
+          market
+        </h4>
+        <img
+          src="./props/svg/03-why_section/01-L-angle.svg"
+          alt="angle"
+          class="l-angle"
+        />
+        <ul class="key-points">
+          <li>
+            <h4>Friendly Layout</h4>
+            <p>
+              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Commodi,
+              incidunt doloribus sunt placeat dolorem qui mollitia aspernatur
+              nam quod vel!
+            </p>
+          </li>
+          <li>
+            <h4>platform Independent</h4>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Perspiciatis quaerat fugit, omnis labore tenetur id deserunt et
+              vitae ducimus molestias blanditiis commodi ut, ea repudiandae.
+            </p>
+          </li>
+          <li>
+            <h4>Kick start with no manual</h4>
+            <p>
+              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eum
+              quos, incidunt doloribus dicta, assumenda officiis obcaecati
+              praesentium, cupiditate natus necessitatibus sed. Reprehenderit
+              explicabo veritatis repudiandae.
+            </p>
+          </li>
+        </ul>
+      </div>
+      <div class="why-section-right">
+        <img src="./props/svg/03-why_section/02-bot.svg" alt="bot" />
+      </div>
+    </div>
+    <!-- ---------------------About Section--------------------------- -->
+    <div class="about-section" id="about-section">
+      <div class="about-section-content">
+        <img
+          src="./props/svg/04-details_section/01-work_space.svg"
+          alt="image"
+        />
+        <p>
+          <span class="about-span">Plethora of workspace</span><br />
+          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quia nostrum
+          atque harum reprehenderit vel itaque sed recusandae nobis numquam
+          officia expedita molestiae perspiciatis consequatur, facilis obcaecati
+          accusamus quam dolorem animi nulla iste. Rem voluptates assumenda
+          repudiandae voluptatibus debitis possimus libero eaque quis
+          consequuntur, nostrum qui quas molestias accusantium laboriosam
+          pariatur.
+        </p>
+      </div>
+    </div>
+    <div class="about-section">
+      <div class="about-section-content">
+        <p>
+          <span class="about-span">Hassle-free Communication</span><br />
+          Boret Lorem ipsum dolor sit amet consectetur adipisicing elit.
+          Distinctio, obcaecati quasi eligendi autem earum saepe. Culpa
+          voluptates, deleniti eligendi repellendus vitae id iure qui odio,
+          velit reiciendis hic fugiat optio explicabo dicta perferendis quia
+          nostrum beatae maxime voluptatibus accusamus quaerat ut veniam nisi
+          corrupti? Eos veritatis beatae repudiandae molestiae quis!
+        </p>
+        <img
+          src="./props/svg/04-details_section/02-communication.svg"
+          alt="image"
+        />
+      </div>
+    </div>
     <!-- Ionic script -->
     <script
       type="module"
