--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="./css/vendor.css" />
     <!-- Notice that the css styles for the vendor get applied first and then can be overwritten by the styles below in case of conflict -->
     <link rel="stylesheet" href="./css/styles.css" />
+    <link rel="stylesheet" href="./css/responsive.css" />
     <title>Synchronize</title>
   </head>
 
@@ -20,6 +21,7 @@
     <!-------------------------Hero section---------------------------->
     <div class="hero-section">
       <nav class="navbar">
+        <input id="nav-toggle" type="checkbox" />
         <a href="#"
           ><img
             src="./props/svg/01-hero_section/01-logo.svg"
@@ -28,7 +30,7 @@
         /></a>
         <ul class="nav-links">
           <li><a href="#app-section">App</a></li>
-          <li><a href="#why-section">Why Synchronize</a></li>
+          <li><a href="#why-section">Why Synchronize?</a></li>
           <li><a href="#about-section">About</a></li>
           <li><a href="#plan-section">Plans</a></li>
           <li><a href="#support-section">Support</a></li>
@@ -36,6 +38,12 @@
         <div class="open-btn btn">
           <a href="#">Open Synchronize</a>
         </div>
+
+        <label for="nav-toggle" class="icon-burger">
+          <div class="bar"></div>
+          <div class="bar"></div>
+          <div class="bar"></div>
+        </label>
       </nav>
       <!-- Hero content -->
       <div class="hero-content">
@@ -77,7 +85,7 @@
     </div>
     <!--------------------------App Section---------------------------->
     <div class="app-section" id="app-section">
-      <div class="backdrop"></div>
+      <!-- <div class="backdrop"></div> -->
       <!-- App -->
       <div class="app-window app-layout">
         <div class="app-server-nav">
@@ -562,11 +570,6 @@
           <span class="about-span">Plethora of workspace</span><br />
           Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quia nostrum
           atque harum reprehenderit vel itaque sed recusandae nobis numquam
-          officia expedita molestiae perspiciatis consequatur, facilis obcaecati
-          accusamus quam dolorem animi nulla iste. Rem voluptates assumenda
-          repudiandae voluptatibus debitis possimus libero eaque quis
-          consequuntur, nostrum qui quas molestias accusantium laboriosam
-          pariatur.
         </p>
       </div>
     </div>
@@ -577,9 +580,6 @@
           Boret Lorem ipsum dolor sit amet consectetur adipisicing elit.
           Distinctio, obcaecati quasi eligendi autem earum saepe. Culpa
           voluptates, deleniti eligendi repellendus vitae id iure qui odio,
-          velit reiciendis hic fugiat optio explicabo dicta perferendis quia
-          nostrum beatae maxime voluptatibus accusamus quaerat ut veniam nisi
-          corrupti? Eos veritatis beatae repudiandae molestiae quis!
         </p>
         <img
           src="./props/svg/04-details_section/02-communication.svg"
@@ -638,7 +638,7 @@
       </div>
     </div>
 
-    <!-- Support Section -->
+    <!-------------------------- Support Section--------------------------- -->
     <div class="support-section" id="support-section">
       <div class="support-header">
         <h2>Need help?</h2>
